# mmica

./: README.md  pyproject.toml  requirements.txt  setup.py
mmica/: __init__.py  _densities.py  _utils.py  solvers.py
